@@ -47,6 +47,12 @@
 - fixed the html_error_template not handling tracebacks from
   normal .py files with a magic encoding comment [ticket:88]
 
+- RichTraceback() now accepts an optional traceback object
+  to be used in place of sys.exc_info()[2].  html_error_template() 
+  and text_error_template() accept an optional
+  render()-time argument "traceback" which is passed to the
+  RichTraceback object.
+  
 - added ModuleTemplate class, which allows the construction
   of a Template given a Python module generated by a previous
   Template.   This allows Python modules alone to be used
